--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -19,6 +19,19 @@ pipeline {
                 sh 'cd terraform && terraform apply -auto-approve'
             }
         }
+        stage('Gerar Inventory Ansible') {
+            steps {
+                dir('terraform') {
+                script {
+                    def instance_ip = sh(
+                    script: "terraform output -raw instance_ip",
+                    returnStdout: true
+                ).trim()
+                 writeFile file: '../ansible/inventory', text: """[vm] vm ansible_host=${instance_ip} ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa"""
+                        }
+                }
+            }
+        }
 
         stage('Configurar Ansible') {
             steps {
