subindo backend e criando bucket para backend do terraform 5

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -22,13 +22,16 @@ pipeline {
 
         stage('Criar Bucket do Backend (se necessário)') {
             steps {
+                withCredentials([
+                    file(credentialsId: 'terraform-key', variable: 'GOOGLE_CREDENTIALS')
+                ]) 
                 dir('terraform') {
                     sh '''
                         terraform init -backend=false
                         terraform apply -target=module.bucket -auto-approve \
                             -var="bucket_name=terraform-state-projeto-cloud" \
                             -var="bucket_location=US" \
-                            -var="credentials_path=$GOOGLE_APPLICATION_CREDENTIALS" \
+                            -var="credentials_path=$GOOGLE_CREDENTIALS" \
                             -var="ssh_public_key="
                     '''
                 }
