subindo backend e criando bucket para backend do terraform 15

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -59,8 +59,7 @@ pipeline {
         stage('Validar Terraform') {
             steps {
                 dir("terraform/environments/$AMBIENTE") {
-                    sh 'terraform fmt -recursive'
-                    sh 'terraform fmt -check'
+                    sh 'terraform fmt -recursive -diff'
                     sh 'terraform validate'
                 }
             }
