subindo backend e criando bucket para backend do terraform 18

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -73,6 +73,7 @@ pipeline {
                 ]) {
                     dir("terraform/environments/$AMBIENTE") {
                         sh """
+                            echo "Arquivo de credenciais: $GOOGLE_CREDENTIALS" && cat $GOOGLE_CREDENTIALS'
                             pwd && ls -la 
                             terraform apply \
                               -var='ssh_public_key=$SSH_PUB_KEY' \
