subindo backend e criando bucket para backend do terraform 20

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -76,6 +76,7 @@ pipeline {
                         sh """
                             pwd && ls -la 
                             terraform apply \
+                              -var="create_bucket=false"\
                               -var='ssh_public_key=$SSH_PUB_KEY' \
                               -var="credentials_path=$GOOGLE_CREDENTIALS" \
                               -var-file="environments/$AMBIENTE/${AMBIENTE}.tfvars" \
