--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -27,14 +27,15 @@ pipeline {
                 ]) {
                     dir('terraform') {
                         sh '''
-                         terraform init -backend=false
-                         terraform apply -auto-approve \
-                              -var="create_bucket=true" \
-                              -var="bucket_name=terraform-state-projeto-cloud" \
-                              -var="bucket_location=US" \
-                              -var="credentials_path=$GOOGLE_CREDENTIALS" \
-                              -var="ssh_public_key="
-                     '''
+                            terraform init -backend=false
+                            terraform apply -auto-approve \
+                                -target=module.bucket \
+                                -var="create_bucket=true" \
+                                -var="bucket_name=terraform-state-projeto-cloud" \
+                                -var="bucket_location=US" \
+                                -var="credentials_path=$GOOGLE_CREDENTIALS" \
+                                -var="ssh_public_key="
+                        '''
                     }
                 }
             }
@@ -44,18 +45,18 @@ pipeline {
             steps {
                 withCredentials([
                     file(credentialsId: 'terraform-key', variable: 'GOOGLE_APPLICATION_CREDENTIALS')
-             ]) {
-                  dir("terraform") {
-                     sh """
-                           terraform init -reconfigure \
-                             -backend-config="credentials=${GOOGLE_APPLICATION_CREDENTIALS}" \
-                             -backend-config="bucket=terraform-state-projeto-cloud" \
-                             -backend-config="prefix=env/$AMBIENTE"
-                       """
+                ]) {
+                    dir("terraform") {
+                        sh """
+                            terraform init -reconfigure \
+                                -backend-config="credentials=${GOOGLE_APPLICATION_CREDENTIALS}" \
+                                -backend-config="bucket=terraform-state-projeto-cloud" \
+                                -backend-config="prefix=env/$AMBIENTE"
+                        """
+                    }
+                }
             }
         }
-    }
-}
 
         stage('Validar Terraform') {
             steps {
@@ -73,16 +74,19 @@ pipeline {
                     file(credentialsId: 'terraform-key', variable: 'GOOGLE_CREDENTIALS')
                 ]) {
                     dir("terraform") {
-                        sh 'echo "Arquivo de credenciais: $GOOGLE_CREDENTIALS" && cat $GOOGLE_CREDENTIALS'
                         sh """
-                            terraform plan -var-file=/$AMBIENTE/dev.tfvars
-                            pwd && ls -la 
+                            terraform plan \
+                                -var="create_bucket=false" \
+                                -var="ssh_public_key=$SSH_PUB_KEY" \
+                                -var="credentials_path=$GOOGLE_CREDENTIALS" \
+                                -var-file="environments/$AMBIENTE/${AMBIENTE}.tfvars"
+                            
                             terraform apply \
-                              -var="create_bucket=false"\
-                              -var='ssh_public_key=$SSH_PUB_KEY' \
-                              -var="credentials_path=$GOOGLE_CREDENTIALS" \
-                              -var-file="environments/$AMBIENTE/${AMBIENTE}.tfvars" \
-                              -auto-approve
+                                -auto-approve \
+                                -var="create_bucket=false" \
+                                -var="ssh_public_key=$SSH_PUB_KEY" \
+                                -var="credentials_path=$GOOGLE_CREDENTIALS" \
+                                -var-file="environments/$AMBIENTE/${AMBIENTE}.tfvars"
                         """
                     }
                 }
@@ -91,14 +95,14 @@ pipeline {
 
         stage('Gerar Inventory Ansible') {
             steps {
-                dir("terraform/environments/$AMBIENTE") {
+                dir("terraform") {
                     script {
                         def instance_ip = sh(
                             script: "terraform output -raw instance_ip",
                             returnStdout: true
                         ).trim()
 
-                        writeFile file: "../../../ansible/inventory", text: """[vm]
+                        writeFile file: "../ansible/inventory", text: """[vm]
 vm ansible_host=${instance_ip} ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/id_rsa
 """
                     }
