--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -41,6 +41,26 @@ pipeline {
           }
         }
 
+        stage('Criar Bucket do Backend (se necessário)') {
+            steps {
+                withCredentials([
+                    file(credentialsId: 'terraform-key', variable: 'GOOGLE_CREDENTIALS')
+                ]) {
+                    dir('terraform') {
+                        sh '''
+                            terraform init -backend=false
+                            terraform apply -auto-approve \
+                                -target=module.bucket \
+                                -var="create_bucket=true" \
+                                -var="bucket_name=terraform-state-projeto-cloud" \
+                                -var="bucket_location=US" \
+                                -var="credentials_path=$GOOGLE_CREDENTIALS" \
+                                -var="ssh_public_key="
+                        '''
+                    }
+                }
+            }
+        }
 
         stage('Terraform Init') {
             steps {
