subindo backend e criando bucket para backend do terraform 30

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -28,15 +28,11 @@ pipeline {
                     dir('terraform') {
                       // Tenta importar apenas se não estiver no state
                      sh '''
-                     terraform state list | grep 'module.bucket.google_storage_bucket.terraform_state[0]' || \
-                     terraform import \
-                          -var="ssh_public_key="
-                          -var="bucket_location=US" \
-                          -var="bucket_name=terraform-state-projeto-cloud" \
-                          -var="credentials_path=$GOOGLE_CREDENTIALS" \
-                          'module.bucket.google_storage_bucket.terraform_state[0]' \
-                           terraform-state-projeto-cloud
-                       '''
+                        terraform state list | grep module.bucket.google_storage_bucket.terraform_state[0] || \
+                        terraform import \
+                            'module.bucket.google_storage_bucket.terraform_state[0]' \
+                        terraform-state-projeto-cloud
+                        '''
                   }
              }
           }
