subindo backend e criando bucket para backend do terraform 31

--- a/jenkins/jenkinsfile
+++ b/jenkins/jenkinsfile
@@ -45,14 +45,10 @@ pipeline {
                 ]) {
                     dir('terraform') {
                         sh '''
-                            terraform init -backend=false
-                            terraform apply -auto-approve \
-                                -target=module.bucket \
-                                -var="create_bucket=true" \
-                                -var="bucket_name=terraform-state-projeto-cloud" \
-                                -var="bucket_location=US" \
-                                -var="credentials_path=$GOOGLE_CREDENTIALS" \
-                                -var="ssh_public_key="
+                            terraform state list | grep "module\\.bucket\\.google_storage_bucket\\.terraform_state\\[0\\]" || \
+                            terraform import \
+                                module.bucket.google_storage_bucket.terraform_state[0] \
+                            terraform-state-projeto-cloud
                         '''
                     }
                 }
